--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
                            These projects were built using Java and MySQL as part of my journey into backend and desktop development. Each one helped me improve my coding skills and understand how real-world applications are built.
                         </p>
                        
-                        <a href="https://github.com/Melihk9207?tab=repositories">My Github Profile</a>
+                       <a href="https://github.com/Melihk9207?tab=repositories" target="_blank">My Github Profile</a>
+
                         <br><br><br>
                     </div>
                 </div>
@@ -118,7 +119,7 @@
                                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Address</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+                                <div class="small text-black-50">Istanbul Beylikduzu, Turkey</div>
                             </div>
                         </div>
                     </div>
@@ -128,7 +129,8 @@
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Email</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50"><a href="#!">hello@yourdomain.com</a></div>
+                                <div class="small text-black-50"><a href="mailto:melihk9207@gmail.com">melihk9207@gmail.com</a>
+</div>
                             </div>
                         </div>
                     </div>
@@ -138,7 +140,7 @@
                                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Phone</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50">+90 (555) 902-8832</div>
+                                <div class="small text-black-50">+90 (553) 156 72 30</div>
                             </div>
                         </div>
                     </div>
